--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ websockets==12.0
 
 firebase-admin==6.4.0
 pycryptodome==3.19.0
+openai==1.3.0
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
+smtplib
