--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 pytz==2024.1
+# Email service dependencies
+python-dotenv==1.0.0
