--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,13 @@ pytz==2024.1
 python-dotenv==1.0.0
 # Email automation dependencies
 guardrails-ai==0.4.0
-pydantic==2.4.2
+pydantic>=2.9.0
 aiohttp==3.9.1
 
 # Realtime predictions dependencies
 pandas>=1.5.0
 numpy>=1.21.0
 scikit-learn>=1.1.0
-fastapi>=0.104.0
+fastapi>=0.115.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
