--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pytz==2024.1
 python-dotenv==1.0.0
 # Email automation dependencies
 guardrails-ai==0.4.0
-pydantic>=2.9.0
+pydantic>=2.0.0,<2.5
 aiohttp==3.9.1
 
 # Realtime predictions dependencies
