--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ idna==3.8
 requests==2.32.3
 urllib3==2.0.7
 websockets==12.0
+twilio>=9.0.0
 
 firebase-admin==6.4.0
 pycryptodome==3.19.0
@@ -14,11 +15,3 @@ google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 pytz==2024.1
 python-dotenv==1.0.0
-
-# Realtime predictions dependencies
-pandas>=1.5.0
-numpy>=1.21.0
-scikit-learn>=1.1.0
-fastapi>=0.115.0
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
